Solved: Overflow problem

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -541,7 +541,6 @@ input.num {
 
 .table-container {
 	margin: 40px 100px 20px 92px;
-	overflow-x: hidden;
 	.top {
 		margin-top     : 16px;
 		margin-bottom  : 16px;
